--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+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
