--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.3",
+    "json-server": "^0.17.3",
     "node-sass": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
